--- a/stable/kubernetes-dashboard/templates/ingress.yaml
+++ b/stable/kubernetes-dashboard/templates/ingress.yaml
@@ -6,6 +6,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "kubernetes-dashboard.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "kubernetes-dashboard.name" . }}
     chart: {{ template "kubernetes-dashboard.chart" . }}
